@@ -1,0 +1,4 @@
+EXTRA_DIST = hotspotlogin.cgi pepper.conf \
+						 pepper.iptables madwifi-start-ap.sh \
+						 pepper.init pepper.ipup pepper.ip6tables \
+						 pepperspot-pf.conf
